init composer and update gitignore;

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+.idea/
+
 assets/*
 !assets/.gitignore
 protected/runtime/*
 !protected/runtime/.gitignore
 protected/data/*.db
 themes/classic/views/
+
+composer.lock
+vendor/
