--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "yiisoft/yii2": "@stable"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7.5"
     },
     "config": {
         "optimize-autoloader": true,
