--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
     "license": "BSD-3-Clause",
     "minimum-stability": "stable",
     "autoload": {
+        "classmap": [
+            "vendor/yiisoft/yii2/BaseYii.php",
+            "vendor/yiisoft/yii2/Yii.php"
+        ],
         "psr-4": {
+            "App\\": "src/"
         }
     },
     "require": {
@@ -13,7 +18,8 @@
         "yiisoft/yii2": "@stable"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "squizlabs/php_codesniffer": "@stable"
     },
     "config": {
         "optimize-autoloader": true,
