add date helper mock and test;

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": ">=7.1",
         "yiisoft/yii2": "@stable"
